custom scrollbal and overflow in landing page fixed

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,32 @@
         font-family: "Plus Jakarta Sans", sans-serif;
     }
 }
+
+
+
+/* cusotm scrollbar  */
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey;  */
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #085172; 
+  border-radius: 10px;
+
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #072125; 
+}
